package ocean.model;

/**
 * Fahrzeugtyp für den Launch-Befehl am OceanServer.
 *
 * @author OceanExplorer Team
 */
public enum VehicleType {
    /** Forschungsschiff */
    ship,
    /** Tauchroboter/U-Boot */
    submarine
}

