@startuml
skinparam classAttributeIconSize 0


class ShipApp {
    - logger: Logger
    - oceanSocket: Socket
    - port: int
    + run()
}

class SubmarineServer {
    - logger: Logger
    - port: int
    + launchSubmarine()
    - acceptLoop()
}

class SubmarineSession {
    - logger: Logger
    - submarineSocket: Socket
    - id: String
    + run()
    + sendPilot(pilotJson: String)
    - handleIncoming(json: String)
}

class DatabaseService {
    - logger: Logger
    - DatabaseService()
    {static} + save(data: ArrayList<String>)
    {static} + get(): ArrayList<String>
}

class VisualisationWebservice {
    - logger: Logger
    + handle(exchange: HttpExchange)
    - setCorsHeader(exchange: HttpExchange)
}

class ShipAppUIFacade {
    - logger: Logger
}

class SubmarineControl {
    - SubmarineControl()
    {static} + ready(id: String, pos: Vec, dir: Vec, depth: int, distance: int): String
    {static} + message(type: String, text: String, pos: Vec): String
    {static} + measure(vectors: ArrayList<Vec>): String
    {static} + picture(id: String, pos: Vec, dir: Vec, picture: String): String
    {static} + crash(id: String, message: String, sector: Vec2D, sunkPos: Vec): String
    {static} + arise(id: String, arisePos: Vec): String
}

class CommandFactory {
    - CommandFactory()
    {static} + launch(name: String, typ: VehicleType, sector: Vec2D, dir: Vec2D): String
    {static} + navigate(rudder: Rudder, course: Course): String
    {static} + scan(): String
    {static} + radar(): String
    {static} + exit(): String
}


abstract class JsonFactory


enum VehicleType {
    ship
    submarine
}

enum Rudder {
    left
    center
    right
}

enum Course {
    forward
    backward
}


ShipApp --> CommandFactory
ShipApp --> SubmarineServer
ShipApp --> ShipAppUIFacade
ShipApp --> VisualisationWebservice
ShipApp --> DatabaseService

JsonFactory <|-- CommandFactory
JsonFactory <|-- SubmarineControl

SubmarineServer "1" o-- "*" SubmarineSession
SubmarineServer --> SubmarineControl
SubmarineSession --> SubmarineControl

ShipAppUIFacade --> DatabaseService
VisualisationWebservice --> DatabaseService

@enduml